# Take-a-break

./: .gitignore  README.md  pyproject.toml  run.vbs
.github/workflows/: release.yml
installer/: build.ps1  entry.py  installer.iss  take-a-break-debug.spec  take-a-break.spec
packaging/: build.ps1  installer.iss  take-a-break.spec
scripts/: install_autostart.ps1
src/take_a_break/: __init__.py  __main__.py  app.py  config.py  overlay.py  scheduler.py  settings_window.py  tray.py
src/take_a_break/core/: config.py  scheduler.py  state.py
src/take_a_break/ui/: overlay.py  settings_window.py  tray.py
